header alignment fix

--- a/work/web/css/grid.css
+++ b/work/web/css/grid.css
@@ -24,7 +24,7 @@
 
 .col-1of3home
 {
-	width: 20%;
+	width: 25rem;
 	text-align: left;
 	margin-bottom: 0.5rem;
 	margin-top: -1rem;
@@ -51,11 +51,12 @@
 
 .col-1of3search
 {
-	width: 60%;
-	margin-top: 2.25rem;
+	width: 37%;
+	padding-top: 2.25rem;
 	text-align: right;
 	float: right;
 }
+
 
 .col-1of3search > a, .col-1of3search>img
 {
@@ -63,13 +64,14 @@
 	float: left;
 }
 
-@media (max-width: 820px) 
+@media (max-width: 835px) 
 {
     .col-1of3search 
 	{
         width: 100%;
-		margin-top: -0.05rem;
+		margin-top: -1rem;
 		text-align: left;
+		
     }
 }
 
@@ -111,7 +113,7 @@
 @media (max-width: 750px) 
 {
     .col-1of5nav 
-       {
+    {
         width: 100%;
         padding-right: 0.5rem;
     }
@@ -286,6 +288,7 @@
 {
     font-size: 1rem;
 }
+
 
 .col-1of2image-cart
 {
